docker environment variables working

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,26 @@
-FROM python:3.11-bullseye
+FROM python:3.11.1-alpine
 
 # RUN apt update 
 # RUN apt install useradd
+# RUN apk update
+# RUN apk add -y useradd
 
-RUN useradd -m -s /bin/bash normal
+# RUN useradd -m -s /bin/bash normal
 
-USER normal
+ARG user=normal
+
+RUN adduser --disabled-password ${user} 
+USER ${user}
 
 WORKDIR /home/normal/django-app
 
 COPY --chown=normal:normal . .
 
-RUN export PATH="$PATH:/home/normal/.local/bin"
-RUN export PRODUCTION=1
+ENV PATH="$PATH:/home/${user}/.local/bin"
+ENV PRODUCTION=1
 
 RUN pip install --upgrade pip && pip install -r requirements_django.txt
 
 EXPOSE 8000
 
-ENTRYPOINT [ "bash", "entrypoint.sh" ]
+ENTRYPOINT [ "sh", "entrypoint.sh" ]
